# ChangeLog for net-www/apache
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.328 2005/03/05 02:45:16 beu Exp $

  05 Mar 2005; Elfyn McBratney <beu@gentoo.org> apache-2.0.52-r3.ebuild,
  apache-2.0.53.ebuild:
  Depend on the 'best version' of apr.

  04 Mar 2005; Elfyn McBratney <beu@gentoo.org> apache-2.0.53.ebuild:
  Drop metux MPM support.

*apache-2.0.53 (04 Mar 2005)

  04 Mar 2005; Elfyn McBratney <beu@gentoo.org> +apache-2.0.53.ebuild:
  Version bump, closes bug #81267

  27 Feb 2005; Michael Stewart <vericgar@gentoo.org> apache-2.0.52-r3.ebuild:
  Remove mips, s390, arm due to apr and apr-util dependency. Bug 77455

  26 Feb 2005; Michael Stewart <vericgar@gentoo.org> apache-2.0.52-r3.ebuild:
  Adding debugging support

  24 Feb 2005; Elfyn McBratney <beu@gentoo.org> apache-2.0.52-r1.ebuild:
  Always create /var/cache/apache2 (closes bug #83187).

  24 Feb 2005; Elfyn McBratney <beu@gentoo.org> apache-2.0.52-r1.ebuild:
  Create /var/log/apache2 and /etc/apache2/conf/ssl (former closes bug #76044).

  21 Feb 2005; Elfyn McBratney <beu@gentoo.org> apache-2.0.52-r3.ebuild:
  Call gentestcrt.sh in pkg_postinst (thanks to Seemant for noticing).

  20 Feb 2005; Michael Stewart <vericgar@gentoo.org> apache-1.3.33-r1.ebuild,
  apache-2.0.52-r3.ebuild:
  Fix SSL test certificate generation; New patch that creates AddDirectoryIndex
  and RemoveDirectoryIndex directives - fixes bug #50611

  18 Feb 2005; Elfyn McBratney <beu@gentoo.org> apache-1.3.33-r1.ebuild,
  apache-2.0.52-r3.ebuild:
  Only reference the gentoo mirrors for the patchball's.

  18 Feb 2005; Elfyn McBratney <beu@gentoo.org> apache-1.3.33-r1.ebuild,
  apache-2.0.52-r3.ebuild:
  Updated patchball (apachectl now exits with an error if lynx is not installed).

  05 Feb 2005; Christian Parpart <trapni@gentoo.org>
  apache-1.3.33-r1.ebuild, apache-2.0.52-r3.ebuild:
  Added enewgroup/enewuser for apache
