@@ -1,6 +1,10 @@
 # ChangeLog for net-www/apache
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.328 2005/03/05 02:45:16 beu Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.329 2005/03/05 02:52:49 beu Exp $
+
+  05 Mar 2005; Elfyn McBratney <beu@gentoo.org> apache-2.0.52-r3.ebuild,
+  apache-2.0.53.ebuild:
+  Depend on the 'best version' of apr-util, too.
 
   05 Mar 2005; Elfyn McBratney <beu@gentoo.org> apache-2.0.52-r3.ebuild,
   apache-2.0.53.ebuild:
